--- a/lesson1_app/src/App.scss
+++ b/lesson1_app/src/App.scss
@@ -7,8 +7,16 @@
     display: flex;
     text-align: center;
     align-items: center;
-    h3{
-        padding: 25px;
+    header{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        h3{
+            padding: 25px;
+        }
+        .chat{
+            width: 100%;
+        }
     }
 }
 .message{
