--- a/lesson1_app/src/App.scss
+++ b/lesson1_app/src/App.scss
@@ -3,23 +3,75 @@
 }
 .App{
     background-color: rgb(90, 121, 90);
-    min-height:  500px;
+    min-height:  100vh;
     display: flex;
     text-align: center;
     align-items: center;
     header{
         display: flex;
         flex-direction: column;
-        width: 100%;
+        width: 77%;
+        border: 2px solid;
+        border-radius: 2rem;
+        padding: 22px;
         h3{
-            padding: 25px;
+            padding: 7px;
         }
-        .chat{
+        .wraper{
+            display: flex;
+            justify-content: space-between;
             width: 100%;
+            .ChatList{
+                border-radius: 1rem;
+                flex-basis: 20%;
+                ul{
+                    border-radius: 1rem;
+                    background-color: #4f7e84;
+                }
+            }
+            .chatWrap{
+                width: 72%;
+                .chat{
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
+                .chat_element{
+                    width: 82%;
+                    border: 1px solid rgb(30, 51, 32);
+                    margin: 2px;
+                    border-radius: 2rem;
+                    padding: 5px 30px;
+                    p{
+                        text-align: start;
+
+                    }
+                    .messageAuthor{
+                        font-size: 18px;
+                        font-weight: 700;
+                    }
+                }
+                form{
+                    width: 100%;
+                    .messageImput{
+                        width: 84%;
+                        margin-top: 20px;
+                        .MuiFormControl-root{
+                            width: 100%;
+                        }
+                        .MuiFilledInput-root{
+                            width: 100%;
+                        }
+                    }
+                    .sendButton{
+                        display: flex;
+                        justify-content: space-between;
+                        width: 84%;
+                        margin-top: 15px;
+                    }
+                }
+            }
         }
     }
-}
-.message{
-    font-size: 20px;
-    font-weight: 700;
 }
