--- a/lesson1_app/src/App.css
+++ b/lesson1_app/src/App.css
@@ -1,5 +1,13 @@
 * {
-  margin: 0 auto;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body._lock {
+  overflow: hidden;
 }
 
 a {
@@ -157,30 +165,36 @@ a {
   padding: 0 4%;
   background: -webkit-gradient(linear, left bottom, left top, from(#62d6d7), to(#f6d48d));
   background: linear-gradient(0deg, #62d6d7 0%, #f6d48d 100%);
+  margin-top: 70px;
 }
 
 .container .article_section {
-  margin-top: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin-top: 20px;
+  gap: 20px;
   max-width: 1200px;
 }
 
 .container .article_section .article_element {
   max-width: 320px;
-  margin: 15px 0;
+  background: rgba(255, 255, 255, 0.7);
 }
 
 .container .article_section .article_element .article_img img {
   max-width: 320px;
   height: 180px;
   width: 100%;
+}
+
+.container .article_section .article_element .article_info {
+  padding: 10px;
 }
 
 .container .profile__page {
@@ -216,27 +230,52 @@ a {
 }
 
 .main__header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  background: #94af61;
+}
+
+.main__header .header__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  max-width: 1200px;
+  margin: 0px auto;
+  padding: 0px 2%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: radial-gradient(circle, #8189b1 0%, #b34a5f 100%);
-  min-height: 150px;
+  min-height: 70px;
 }
 
-.main__header ul {
+.main__header .header__container .menu__body {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
+.main__header .header__container .menu__body .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   list-style-type: none;
-  min-width: 1200px;
+  padding: 0 2rem;
+  max-width: 1200px;
+  width: 100%;
   font-size: 22px;
   font-weight: 600;
 }
 
-.main__header ul .inactive_class {
+.main__header .header__container .menu__body .menu__list .inactive_class {
+  display: none;
+}
+
+.main__header .header__container .menu__icon {
   display: none;
 }
 
@@ -270,5 +309,99 @@ a {
   font-size: 18px;
   border-radius: 5px;
   border: 1px solid;
+}
+
+@media (max-width: 767px) {
+  .main__header .header__container {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .main__header .header__container .menu__body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    padding: 100px 30px 30px 30px;
+    -webkit-transition: left 0.3s ease 0s;
+    transition: left 0.3s ease 0s;
+    overflow: auto;
+    min-height: 100vh;
+    background: #d2eddcd6;
+  }
+  .main__header .header__container .menu__body .menu__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .main__header .header__container .menu__body .menu__list li {
+    font-size: 30px;
+    margin-bottom: 30px;
+  }
+  .main__header .header__container .menu__body._active {
+    left: 0;
+  }
+  .main__header .header__container .menu__icon {
+    z-index: 5;
+    display: block;
+    position: relative;
+    width: 35px;
+    height: 27px;
+    cursor: pointer;
+    margin-right: 5%;
+  }
+  .main__header .header__container .menu__icon span,
+  .main__header .header__container .menu__icon::before,
+  .main__header .header__container .menu__icon::after {
+    left: 0;
+    position: absolute;
+    height: 10%;
+    width: 100%;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    background-color: #181313;
+  }
+  .main__header .header__container .menu__icon::before,
+  .main__header .header__container .menu__icon::after {
+    content: "";
+  }
+  .main__header .header__container .menu__icon::before {
+    top: 0;
+  }
+  .main__header .header__container .menu__icon::after {
+    bottom: 0;
+  }
+  .main__header .header__container .menu__icon span {
+    top: 50%;
+    -webkit-transform: scale(1) translate(0px, -50%);
+            transform: scale(1) translate(0px, -50%);
+  }
+  .main__header .header__container .menu__icon._active span {
+    -webkit-transform: scale(0) translate(0px, -50%);
+            transform: scale(0) translate(0px, -50%);
+  }
+  .main__header .header__container .menu__icon._active::before {
+    top: 50%;
+    -webkit-transform: rotate(-45deg) translate(0px, -50%);
+            transform: rotate(-45deg) translate(0px, -50%);
+  }
+  .main__header .header__container .menu__icon._active::after {
+    bottom: 50%;
+    -webkit-transform: rotate(45deg) translate(0px, 50%);
+            transform: rotate(45deg) translate(0px, 50%);
+  }
 }
 /*# sourceMappingURL=App.css.map */
