--- a/lesson1_app/src/App.scss
+++ b/lesson1_app/src/App.scss
@@ -11,90 +11,125 @@ a{
 
 .app{
     background: linear-gradient(0deg, rgba(98,214,215,1) 0%, rgba(246,212,141,1) 100%);
-    min-height:  100vh;
+    min-height:  90vh;
     display: flex;
     flex-direction: column;
-    text-align: center;
-    .app__header{
-        height: 100%;
+    align-items: center;
+    .app__wraper{
+        display: flex;
+        justify-content: space-between;
         margin-top: 35px;
-        width: 77%;
-        max-width: 1200px;
-        border: 2px solid;
-        border-radius: 2rem;
-        padding: 22px;
-        h3{
-            padding: 7px;
-        }
-        .wraper{
+        width: 98%;
+        height: 80vh;
+        border-radius: 1rem;
+        .app__chatList{
             display: flex;
+            flex-direction: column;
             justify-content: space-between;
-            width: 100%;
-            .ChatList{
+            border-radius: 1rem;
+            width: 20%;
+            padding: 5px 10px;
+            min-height: 100%;
+            background: rgba(0, 0, 0, 0.1);
+            ul{
                 border-radius: 1rem;
-                flex-basis: 20%;
-                ul{
-                    border-radius: 1rem;
-                    background-color: #9fae7d;
-                    margin-bottom: 10px;
+                background: transparent;
+                margin-bottom: 10px;
+                height: 95%;
+                overflow: scroll;
+                .MuiListItem-button{
+                    background:rgba(0, 0, 0, 0.2);
+                    border-radius: 5px;
+                    margin-bottom: 2px;
                 }
-                a{
+                .chat__button{
+                    padding: 4px 7px;
+                    border-radius: 3px;
+                }
+            }
+            a{
+                display: flex;
+                width: 100%;
+                align-items: center;
+            }
+            .chatList__form{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                margin: 15px 0;
+                input{
+                    font-size: 16px;
+                    padding-left: 5px;
+                    height: 27px;
+                    width: 65%;
+                    border-radius: 3px;
+                }
+                .chatList__button{
+                    font-size: 16px;
+                    padding: 5px;
+                    margin-left: 5px;
+                    border-radius: 3px;
+                }
+            }
+        }
+        .app__chats{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 80%;
+            .chat{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 100%;
+                height: 100%;
+                overflow: scroll;
+                .chat_element{
                     display: flex;
-                    width: 100%;
-                    align-items: center;
-                }
-                form{
-                    input{
-                        width: 150px;
+                    justify-content: space-between;
+                    width: 90%;
+                    background: rgba(255, 255, 255, 0.4);
+                    border-radius: 5px;
+                    margin: 2px;
+                    padding: 5px;
+                    .chat_block{
+                        width: 90%;
+                        p{
+                            text-align: start;
+                        }
+                        .messageAuthor{
+                            font-size: 18px;
+                            font-weight: 700;
+                        }
                     }
-                    button{
-                        margin-top: 10px;
-                        margin-left: 5px;
+                    .message_deleate{
+                        display: inline-block;
+                        width: 30px;
+                        height: 30px;
+                        border-radius: 3px;
                     }
                 }
             }
-            .chatWrap{
-                width: 72%;
-                .chat{
-                    width: 100%;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                }
-                .chat_element{
-                    width: 82%;
-                    border: 1px solid rgb(30, 51, 32);
-                    margin: 2px;
-                    border-radius: 2rem;
-                    padding: 5px 30px;
-                    display: flex;
-                    p{
-                        text-align: start;
-
+            .app__chat_send{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 100%;
+                .messageImput{
+                    width: 90%;
+                    margin-top: 20px;
+                    .MuiFormControl-root{
+                        width: 100%;
                     }
-                    .messageAuthor{
-                        font-size: 18px;
-                        font-weight: 700;
+                    .MuiFilledInput-root{
+                        width: 100%;
                     }
                 }
-                form{
-                    width: 100%;
-                    .messageImput{
-                        width: 84%;
-                        margin-top: 20px;
-                        .MuiFormControl-root{
-                            width: 100%;
-                        }
-                        .MuiFilledInput-root{
-                            width: 100%;
-                        }
-                    }
-                    .sendButton{
-                        display: flex;
-                        justify-content: space-between;
-                        width: 84%;
-                        margin-top: 15px;
-                    }
+                .sendButton{
+                    display: flex;
+                    justify-content: flex-end;
+                    width: 90%;
+                    margin-top: 5px;
                 }
             }
         }
@@ -103,18 +138,18 @@ a{
         margin-top: 35px;
     }
 }
+
 .container{
     display: flex;
     justify-content: center;
     min-height: 100vh;
-    padding: 0 4%;
+    padding: 2% 4%;
     background: linear-gradient(0deg, rgba(98,214,215,1) 0%, rgba(246,212,141,1) 100%);
-    margin-top: 70px;
     .article_section{
+        position: relative;
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
-        margin-top: 20px;
         gap: 20px;
         max-width: 1200px;
         .article_element{
@@ -135,32 +170,61 @@ a{
             }
         }
     }
-    .profile__page{
+    .container__wraper{
         display: flex;
         flex-direction: column;
-        margin-top: 25px;
-        text-align: center;
-        max-width: 1200px;
+        align-items: center;
+        width: 100%;
         h2{
             font-size: 25px;
-            margin: 20px 0;
+            margin: 0 0 20px 0;
         }
-        .profile__info{
+        .profile__page{
             display: flex;
-            width: 100%;
-            border: 1px solid black;
-            border-radius: 5px;
-            padding: 5px;
-        }
-        .logout{
-            margin-top: 15px;
+            flex-direction: column;
+            text-align: center;
+            min-width: 310px;
+            width: 50%;
+            background: rgba(0, 0, 0, 0.1);
+            padding: 25px;
+            border-radius: 10px;
+            .profile__info{
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+                font-size: 20px;
+                font-weight: 600;
+                .profile__form{
+                    display: flex;
+                    align-items: center;
+                    width: 70%;
+                    input{
+                        display: inline-block;
+                        width: 70%;
+                        height: 24px;
+                        font-size: 16px;
+                        padding-left: 10px;
+
+                    }
+                    button{
+                        display: inline-block;
+                        padding: 5px 10px;
+                        border-radius: 5px;
+                        margin-left: 10px;
+                        width: 30%;
+                    }
+                }
+            }
+            .logout{
+                margin-top: 25px;
+                font-size: 20px;
+                padding: 10px;
+                border-radius: 5px;
+            }
         }
     }
 }
 .main__header{
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     z-index: 10;
     background: #94af61;
@@ -192,31 +256,116 @@ a{
         }
     }
 }
-.login_form{
+.form__wraper{
     display: flex;
-    flex-direction: column;
-    margin-top: 35px;
-    width: 320px;
-    height: 100%;
-    border: 1px solid black;
-    border-radius: 20px;
-    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(87,125,171,1) 100%);
-    input{
-        margin-top: 20px;
-        padding-left: 15px;
-        font-size: 18px;
-        width: 80%;
-        border: 1px solid;
-        border-radius: 5px;
-    }
-    button{
-        margin: 15px 10px;
-        font-size: 18px;
-        border-radius: 5px;
-        border: 1px solid;
+    justify-content: space-around;
+    width: 100%;
+    .login_form{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 30px;
+        width: 45%;
+        min-width: 300px;
+        height: 300px;
+        border: 1px solid black;
+        border-radius: 20px;
+        padding: 20px;
+        background: rgba(0, 0, 0, 0.1);
+        input{
+            margin-top: 20px;
+            padding-left: 15px;
+            font-size: 18px;
+            width: 80%;
+            border: 1px solid;
+            border-radius: 5px;
+            height: 35px
+        }
+        button{
+            margin: 15px 10px;
+            font-size: 18px;
+            font-weight: 600;
+            padding: 5px 10px;
+            border-radius: 5px;
+            border: 1px solid;
+        }
     }
 }
-
+.main__footer{
+    width: 100%;
+    z-index: 10;
+    background: #299393;
+    .footer__container{
+        display: flex;
+        justify-content: space-between;
+        max-width: 1200px;
+        margin: 0px auto;
+        padding: 0px 2%;
+        align-items: center;
+        min-height: 70px;
+        font-size: 18px;
+        .content__nav{
+            display: flex;
+            a{
+                display: block;
+                font-size: 30px;
+                margin-left: 30px;
+                transition: transform 0.4s;
+            }
+            a:hover{
+                transform: scale(1.3);
+            }
+        }
+    }
+}
+@media (min-width: 1301px) and (max-width: 1750px){
+    .container{
+        .container__wraper{
+            .profile__page{
+                .profile__info{
+                    flex-wrap: wrap;
+                    .profile__form{
+                        margin-top: 15px;
+                        width: 100%;
+                    }
+                }
+            }
+        }
+    }
+}
+@media (min-width: 901px) and (max-width: 1300px){
+    .form__wraper{
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        .login_form{
+            width: 100%;
+        }
+    }
+    .app{
+        .app__wraper{
+            .app__chatList{
+                width: 30%;
+            }
+            .app__chats{
+                width: 70%;
+            }
+        }
+    }
+}
+@media (min-width: 768px) and (max-width: 900px) {
+    .app{
+        .app__wraper{
+            .app__chatList{
+                width: 35%;
+            }
+            .app__chats{
+                width: 65%;
+            }
+        }
+    }
+}
 @media (max-width: 767px){
     .main__header{
         .header__container{
@@ -290,6 +439,27 @@ a{
             .menu__icon._active::after{
                 bottom: 50%;
                 transform: rotate(45deg) translate(0px, 50%);
+            }
+        }
+    }
+    .form__wraper{
+        .login_form{
+            h3{
+                text-align: center;
+            }
+        }
+    }
+    .main__footer{
+        .footer__container{
+            flex-direction: column;
+            .footer__container_text{
+                margin-top: 15px;
+            }
+            .content__nav{
+                margin: 15px 0;
+                a{
+                    margin: 0 20px;
+                }
             }
         }
     }
